--- a/iscream.html
+++ b/iscream.html
@@ -20,7 +20,7 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/flow.png" alt="Flow Chart">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/flow.png" alt="Flow chart">
       </div>
 
     <div class="grid lists">
@@ -63,19 +63,19 @@ layout: default
     </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch2.jpg" alt="Mock up Sketches">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/sketch2.jpg" alt="Mock up sketches">
       </div>
 
       <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">When evaluating what users feel during their ice cream shop experience, I came up with the problem statement, <strong>Ice cream lovers need a way to easily view what is offered at ice-cream shops because they want to know their options.</strong> With this knowledge I came up with three different flows that my app should include to support my users needs.</p>
+        <p class="milli">When evaluating what users feel during their ice cream shop experience, I came up with the problem statement, <strong>Ice cream lovers need a way to easily view what is offered at ice-cream shops because they want to know their options.</strong> With this knowledge I came up with three different flows that my app should include to support my users needs. To get the best understanding for the app I created sketches of the screens to see how the flow would work. Once that was planned out I was able to test it out with interactive screens and then final create an animation to display the app and give viewers a visual experience.</p>
       </div>
 
-      <div class="card unit s-1 m-1-2 l-3-4 island">
+      <div class="card unit s-1 m-1-2 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/screen.jpg" alt="Iphone X mock up">
       </div>
 
-      <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">To get the best understanding for the app I created sketches of the screens to see how the flow would work. Once that was planned out I was able to test it out with interactive screens and then final create an animation to display the app and give viewers a visual experience.</p>
+      <div class="card unit s-1 m-1-2 l-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/i-scream/cups.jpg" alt="Icecream cups">
       </div>
 
       <div class="embed embed-16by9">
