--- a/solink.html
+++ b/solink.html
@@ -60,50 +60,50 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/brochure.jpg" alt="Buisness cards">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/brochure.jpg" alt="Trades brochure">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/movies.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/movies.jpg" alt="Movie theatre onepager">
       </div>
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/threebanners.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/threebanners.jpg" alt="Three Solink tradeshow banners">
       </div>
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/postcard.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/postcard.jpg" alt="Solink Ideal POS postcard">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/tims.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/tims.jpg" alt="Tim Hortons case study">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/burger.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/burger.jpg" alt="Burger box">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/cards.jpg" alt="Buisness cards">
       </div>
 
       <div class="card unit s-1 m-1 l-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/booth.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/booth.jpg" alt="Solink Tims camper booth">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/firstin.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/firstin.jpg" alt="First in first out onepager">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/bank.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/bank.jpg" alt="Bank onepager">
       </div>
 
 
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/infographic.jpg" alt="Buisness cards">
+        <img class="portfolio-piece " src="{{site.baseurl}}/images/solink/infographic.jpg" alt="Solink customer infographic">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/brochuretims.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/brochuretims.jpg" alt="Tim Hortons brochure">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/toast.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/toast.jpg" alt="Solink plus Toast one pager">
       </div>
       <div class="card unit s-1 m-1-2 l-1-4 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/features.jpg" alt="Buisness cards">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/solink/features.jpg" alt="Solink features">
       </div>
 
       <div class="embed embed-16by9">
