added in the DRBIA to the website

--- a/canadian.html
+++ b/canadian.html
@@ -6,20 +6,24 @@ layout: default
     <h3 class="island">Canadian</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-1-2 l-3-4 island">
+      <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/coffee.jpg" alt="Mug">
       </div>
 
-      <div class="unit s-1 m-1-2 l-1-4 island">
-        <p class="milli">With 2017 being the 150<sup>th</sup> anniversary of Canada it gave me an opportunity to create logos and merchandise to commemorate the event but aren't limited to 2017 only. I started off by creating sketches of things that represented Canada. After lots of generic beaver, hockey and maple leaf sketches I focused my sketches on creating a lumberjack since it was the most unique approach.</p>
+      <div class="unit s-1 m-1-2 island">
+        <p class="milli">With 2017 being the 150<sup>th</sup> anniversary of Canada it gave me an opportunity to create logos and merchandise to commemorate the event but aren't limited to 2017 only. I started off by creating sketches of things that represented Canada. After lots of generic beaver, hockey and maple leaf sketches I focused my sketches on creating a lumberjack since it was the most unique approach. I got the idea from Big Joe Mufferaw who may not be known to may people but is more well known in Ottawa for being the mascot for the local CFL team the Ottawa Redblacks.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/sketch.jpg" alt="Sketches">
       </div>
 
-      <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/logos.jpg" alt="Logo Variations">
+      <div class="unit s-1 m-1-2 island">
+        <p class="milli">The approach I decided to go with was a drawing of a lumberjack's face with a maple leaf and forest behind him. After a few takes, the forest began to look like too much behind the lumberjack for a simple logo. With the leaf behind the head I extended the bottom of the leaf and infused it with the plaid to make it part of the lumberjacks body to connect the two pieces. Creating a more dynamic look.</p>
+      </div>
+
+      <div class="card unit s-1 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/canadian/logos.png" alt="Logo Variations">
       </div>
 
 
@@ -28,7 +32,6 @@ layout: default
       </div>
 
       <div class="unit multi s-1 m-1 l-1-2 island">
-        <p class="milli">The approach I decided to go with was a drawing of a lumberjack's face with a maple leaf and forest behind him. After a few takes, the forest began to look like too much behind the lumberjack for a simple logo. With the leaf behind the head I extended the bottom of the leaf and infused it with the plaid to make it part of the lumberjacks body to connect the two pieces.</p>
         <p class="milli">The plaid I used with the lumberjack logo gave inspiration for another piece. I wanted to design a commemorative Canada 150 piece. One of the most iconic things in Canada is maple syrup so I began creating designs for maple syrup bottles. To make the syrup more unique and stand out from any other ones I created a wine bottle that would carry out the plaid look along with a box to go in.</p>
         <p class="milli">
         With the design of the bottle label and box I wanted to keep it simple and use simple lines like the lumberjack logo. I wanted to use red and white for the look since they are the Canadian colours but also use black to give it a more dark and bold look. To complement the plaid I went with a black board look on the bottle and used a white hand written font to look like chalk.</p>
