--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div class=bannerbg>
   <div class="banner grid grid-middle wrapper">
     <div class="unit s-1-3">
-      <img class="picture img-flex" src="{{site.baseurl}}/images/erin.png" alt="">
+      <img class="picture img-flex" src="{{site.baseurl}}/images/jpokemon-02.png" alt="">
     </div>
 
     <div class="unit island bannertext s-2-3">
@@ -23,7 +23,7 @@ layout: default
     <div>
       <h2 class="">Hey There!</h2>
     </div>
-    <p>My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>illustration</strong>, <strong>branding</strong> and <strong>motion</strong>.</p>
+    <p>My name is Jaimie and I am a graphic designer/developer located in Ottawa, Ontario. I specialize in <strong>branding</strong>, <strong>illustration</strong> and <strong>motion</strong>.</p>
   </div>
 </div>
 
@@ -35,7 +35,7 @@ layout: default
 
   <a href="{{site.baseurl}}solink" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-09.png" alt="">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-09.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Solink</h3>
       </div>
@@ -50,6 +50,42 @@ layout: default
       </div>
     </div>
   </a>
+
+  <!-- <a href="{{site.baseurl}}pottery" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Ottawa Guild of Potters</h3>
+      </div>
+    </div>
+  </a> -->
+
+  <!-- <a href="{{site.baseurl}}glow" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Glow for Kids</h3>
+      </div>
+    </div>
+  </a> -->
+
+  <a href="{{site.baseurl}}drbia" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-10.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Downtown Rideau BIA</h3>
+      </div>
+    </div>
+  </a>
+
+  <!-- <a href="{{site.baseurl}}dws" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">DWS</h3>
+      </div>
+    </div>
+  </a> -->
 
   <a href="{{site.baseurl}}iscream" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
@@ -68,6 +104,15 @@ layout: default
       </div>
     </div>
   </a>
+
+  <!-- <a href="{{site.baseurl}}canadian" class="card unit xs-1-2 m-1-2 l-1-4">
+    <div class="relative">
+      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-07.jpg" alt="">
+      <div class="content center-contents">
+        <h3 class="">Canadian</h3>
+      </div>
+    </div>
+  </a> -->
 
   <a href="{{site.baseurl}}vans" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
@@ -95,16 +140,6 @@ layout: default
       </div>
     </div>
   </a>
-
-
-  <!-- <a href="{{site.baseurl}}canadian" class="card unit xs-1-2 m-1-2 l-1-4">
-    <div class="relative">
-      <img class="img-flex" src="{{site.baseurl}}/images/work-icon-07.jpg" alt="">
-      <div class="content center-contents">
-        <h3 class="">Canadian</h3>
-      </div>
-    </div>
-  </a> -->
 
   <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
