--- a/jacket.html
+++ b/jacket.html
@@ -22,20 +22,21 @@ layout: default
         <p class="milli">After getting inspiration I began brainstorming ideas for a poster by creating a spider graph. With this I was able to write down everything that came to mind when thinking about the movie. During my brainstorming I made associations to several other books, films and games, connections that would not be made right away. The ones that caught my attention were the common connections between the movie and one of my favourite video games titled <i>Little Nightmares</i>. Although they are two completely different horror stories, they each have a child that sports a yellow jacket. Furthermore I was able to come up with another fantasy/thriller movie that included a child with a yellow jacket, Tim Burtons' <i>Coraline</i>.</p>
       </div>
 
-      <div class="card unit s-1 l-3-4 island">
+      <div class="card unit s-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/sketch.jpg" alt="Style Sketches">
       </div>
 
-      <div class="unit s-1 l-1-4 island">
+      <div class="unit s-1 l-1-2 island">
         <p class="milli">With the yellow jacket connection between this book, video game and movie I decided to create a multi poster piece and create a poster for each creation. With research done for each piece I began making sketches to come up with a look for each poster. Each poster would be created with a yellow jacket but use different props in each poster to tell three different stories.</p>
       </div>
 
-      <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/case1.jpg" alt="Phone Case">
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/case.jpg" alt="Phone Case">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli"></p>
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/jackets/little.jpg" alt="Phone Case">
       </div>
+
     </div>
   </section>
