--- a/nerd.html
+++ b/nerd.html
@@ -6,12 +6,12 @@ layout: default
     <h3 class="island">Nerd Alert</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 m-1 l-3-4 island">
+      <div class="card unit s-1 m-1 l-1-2 island">
         <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/hat.jpg" alt="Waluigi Hat">
       </div>
 
-      <div class="unit s-1 m-1 l-1-4 island">
-        <p class="milli">Video games are the reason I got into graphic design.  In my spare time I would make posters to advertise my favourite games, I never realized where this pastime would take me. Over the years I have learned how to make my pencil sketches come alive by using different mediums, these designs are now more than 2 dimensional sketches on paper.</p>
+      <div class="unit s-1 m-1 l-1-2 island">
+        <p class="milli">Video games are the reason I got into graphic design.  In my spare time I would make posters to advertise my favourite games, redesign covers, and sketch my own video game characters.  I never realized where this pastime would take me. Over the years I have learned how to make my sketches come alive by using different mediums.  These designs are now more than 2 dimensional sketches on paper.</p>
       </div>
 
       <div class="card unit s-1 m-1-2 l-3-4 island">
@@ -22,24 +22,21 @@ layout: default
         <p class="milli">When I get into a new game it inspires new ideas and provides me opportunities for sketching. Since the release of the Nintendo Switch, Nintendo has introduced many Mario games which gave me many new inspirations. There are so many different ways to represent this game and still have it recognizable to everyone, not just gamers.</p>
       </div>
 
-      <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/long.jpg" alt="Mario and Luigi Sweater">
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/ps4casesv1.jpg" alt="Mario and Luigi Sweater">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/mug.jpg" alt="Star Pocket Mug">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/ps4casesv2.jpg" alt="Mario and Luigi Sweater">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/man.jpg" alt="Yoshi Egg Shirt">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/shoes.jpg" alt="Mario and Luigi Sweater">
       </div>
 
-      <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/shoes.jpg" alt="Yoshi Shoes">
+      <div class="card unit s-1 m-1-2 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/nerd/long.jpg" alt="Yoshi Shoes">
       </div>
 
-      <div class="unit s-1 m-1-3 island">
-        <p class="milli"></p>
-      </div>
     </div>
   </section>
