image size updates

--- a/vans.html
+++ b/vans.html
@@ -6,12 +6,8 @@ layout: default
     <h3 class="island">Vans</h3>
     <div class="pieces grid">
 
-      <div class="card unit s-1 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/poster.jpg" alt="Vans Poster">
-      </div>
-
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/sketch.jpg" alt="Art Deco Sketches">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/bag.jpg" alt="Vans Poster">
       </div>
 
       <div class="unit multi s-1 m-1-2 island">
@@ -20,11 +16,15 @@ layout: default
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/bag.jpg" alt="Vans Shopping Bag">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/sketch.jpg" alt="Art Deco Sketches">
       </div>
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/card.jpg" alt="Vans Gift Card">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/card.jpg" alt="Vans Shopping Bag">
+      </div>
+
+      <div class="card unit s-1 island">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/vans/poster.jpg" alt="Vans Gift Card">
       </div>
 
     </div>
