--- a/drbia.html
+++ b/drbia.html
@@ -7,7 +7,7 @@ layout: default
     <div class="pieces grid">
 
       <div class="card unit s-1 m-1-2 island">
-        <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/ads.png" alt="The Fourth at the NAC poster">
+        <img class="portfolio-piece" src="{{site.baseurl}}/images/drbia/ads.jpg" alt="The Fourth at the NAC poster">
       </div>
 
       <div class="unit s-1 m-1-2 island">
