removed adventure for now

--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@ layout: default
     </div>
   </a>
 
-  <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
+  <!-- <a href="{{site.baseurl}}adventure" class="card unit xs-1-2 m-1-2 l-1-4">
     <div class="relative">
       <img class="img-flex" src="{{site.baseurl}}/images/work-icon-04.jpg" alt="">
       <div class="content center-contents">
         <h3 class="">Adventure</h3>
       </div>
     </div>
-  </a>
+  </a> -->
 
 </section>
 
